--- a/project/main/templates/main/layout.html
+++ b/project/main/templates/main/layout.html
@@ -1,12 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block totle %}{% endblock  %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
 </head>
 <body>
-    {% block content %}
-    {% endblock  %}
+    <aside>
+        <ul>
+            <a href=""><li>Главная</li></a>
+            <a href=""><li>Про нас</li></a>
+            <a href=""><li>Контакты</li></a>
+        </ul>
+    </aside>
+    
+    <main>
+        {% block content %}
+        {% endblock  %}
+    </main>
 </body>
 </html>
