--- a/project/main/templates/main/layout.html
+++ b/project/main/templates/main/layout.html
@@ -11,11 +11,13 @@
 <body>
     <aside>
         <ul>
-            <a href=""><li>Главная</li></a>
-            <a href=""><li>Про нас</li></a>
-            <a href=""><li>Контакты</li></a>
+            <li><a href="">Главная</a></li>
+            <li><a href="">Про нас</a></li>
+            <li><a href="">Контакты</a></li>
         </ul>
     </aside>
+    
+    
     
     <main>
         {% block content %}
