--- a/project/main/templates/main/about.html
+++ b/project/main/templates/main/about.html
@@ -4,5 +4,6 @@
 
 {% block content %}
     <h1>Про нас</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nesciunt amet iste! Error eligendi debitis repudiandae vitae. Saepe magnam ea incidunt eos? Exercitationem enim dolor, repudiandae accusantium cum nam blanditiis.</p>
 {% endblock  %}
 
