--- a/project/main/templates/main/index.html
+++ b/project/main/templates/main/index.html
@@ -4,4 +4,6 @@
 
 {% block content %}
     <h1>Главная страница</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio cupiditate architecto iste ducimus earum delectus illo veritatis beatae possimus quidem nesciunt eaque assumenda, nobis corporis, tempora, officia enim iure a!</p>
+    
 {% endblock  %}
