--- a/project/main/templates/main/layout.html
+++ b/project/main/templates/main/layout.html
@@ -11,9 +11,9 @@
 <body>
     <aside>
         <ul>
-            <li><a href="">Главная</a></li>
-            <li><a href="">Про нас</a></li>
-            <li><a href="">Контакты</a></li>
+        <li><a href="{% url 'index' %}">Главная</a></li>
+        <li><a href="{% url 'about' %}">Про нас</a></li>
+        <li><a href="{% url 'contacts' %}">Контакты</a></li>
         </ul>
     </aside>
     
