--- a/project/main/templates/main/about.html
+++ b/project/main/templates/main/about.html
@@ -1,9 +1,9 @@
 {% extends "main/layout.html" %}
 
-{% block title %}Про нас{% endblock title %}
+{% block title %}{{ about }}{% endblock title %}
 
 {% block content %}
-    <h1>Про нас</h1>
+    <h1>{{ about }}</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nesciunt amet iste! Error eligendi debitis repudiandae vitae. Saepe magnam ea incidunt eos? Exercitationem enim dolor, repudiandae accusantium cum nam blanditiis.</p>
 {% endblock  %}
 
