--- a/project/main/templates/main/index.html
+++ b/project/main/templates/main/index.html
@@ -1,9 +1,9 @@
 {% extends "main/layout.html" %}
 
-{% block title %}Главная страница{% endblock title %}
+{% block title %}{{ index }}{% endblock title %}
 
 {% block content %}
-    <h1>Главная страница</h1>
+    <h1>{{ index }}</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio cupiditate architecto iste ducimus earum delectus illo veritatis beatae possimus quidem nesciunt eaque assumenda, nobis corporis, tempora, officia enim iure a!</p>
     
 {% endblock  %}
