--- a/project/news/templates/news/news.html
+++ b/project/news/templates/news/news.html
@@ -5,14 +5,18 @@
 {% block content %}
     <h1>Новости на сайте</h1>
     
-    {% for el in news %}
-        <div class="alert alert-warning">
-            {% if el.photo %}
-                <img src="{{ el.photo.url }}" alt="{{ el.title }}" class="img-thumbnail mb-2" style="max-width: 200px; height: auto;">
-            {% endif %}
-            <h3>{{ el.title }}</h3>
-            <p>{{ el.full_text }}</p>
-        </div>
-    {% endfor %}
+    {% if news %}
+        {% for el in news %}
+            <div class="alert alert-warning">
+                {% if el.photo %}
+                    <img src="{{ el.photo.url }}" alt="{{ el.title }}" class="img-thumbnail mb-2" style="max-width: 200px; height: auto;">
+                {% endif %}
+                <h3>{{ el.title }}</h3>
+                <p>{{ el.full_text }}</p>
+            </div>
+        {% endfor %}
+    {% else %}
+        <p>Пока нет новостей</p>
+    {% endif %}
     
 {% endblock  %}
