--- a/project/news/templates/news/news.html
+++ b/project/news/templates/news/news.html
@@ -3,13 +3,14 @@
 {% block title %}Новости на сайте{% endblock title %}
 
 {% block content %}
+    
     <h1>Новости на сайте</h1>
     
     {% if news %}
         {% for el in news %}
-            <div class="alert alert-warning">
+            <div class="class_news">
                 {% if el.photo %}
-                    <img src="{{ el.photo.url }}" alt="{{ el.title }}" class="img-thumbnail mb-2" style="max-width: 200px; height: auto;">
+                    <img src="{{ el.photo.url }}" alt="{{ el.title }}">
                 {% endif %}
                 <h3>{{ el.title }}</h3>
                 <p>{{ el.full_text }}</p>
