--- a/project/main/templates/main/layout.html
+++ b/project/main/templates/main/layout.html
@@ -15,6 +15,7 @@
         <li><a href="{% url 'news' %}">Новости</a></li>
         <li><a href="{% url 'about' %}">Про нас</a></li>
         <li><a href="{% url 'contacts' %}">Контакты</a></li>
+        <li><a href="{% url 'create' %}">Добавить запись</a></li>
         </ul>
     </aside>
     
