--- a/project/main/templates/main/layout.html
+++ b/project/main/templates/main/layout.html
@@ -7,6 +7,8 @@
     <title>{% block title %}{% endblock  %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
+
 </head>
 <body>
     <aside>
